--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 tokens.py
 *.pyc
+__pycache__/birthdays.cpython-311.pyc
+__pycache__/birthdays.cpython-311.pyc
+__pycache__/classes.cpython-311.pyc
+__pycache__/draft.cpython-311.pyc
+__pycache__/ranked.cpython-311.pyc
