--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 tokens.py
+__pycache__/birthdays.cpython-311.pyc
+__pycache__/classes.cpython-311.pyc
+__pycache__/draft.cpython-311.pyc
+__pycache__/ranked.cpython-311.pyc
+__pycache__/tokens.cpython-311.pyc
