--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 
 tokens.py
-__pycache__/birthdays.cpython-311.pyc
-__pycache__/classes.cpython-311.pyc
-__pycache__/draft.cpython-311.pyc
-__pycache__/ranked.cpython-311.pyc
-__pycache__/tokens.cpython-311.pyc
+__pycache__/*
 db.sqlite
-db.sqlite
+.gitignore
